<?xml version="1.0"?>
<package>
  <name>gazebo_kuka_lwr</name>
  <version>0.0.0</version>
  <description>The package contains sdf model of Kuka LWR robot and simple plugin for Gazebo</description>

  <maintainer email="dseredyn@todo.todo">dseredyn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
